# ArduinoFramework

./: CMakeLists.txt  README.md  build_firmware.sh  upload_firmware.sh
cmake/modules/: arduino_core.cmake  arduino_uno_core.cmake  search_tools.cmake
cmake/toolchain_files/: arduino_toolchain.cmake  arduino_uno_toolchain.cmake
src/: main.cpp
tests/cmake/: CMakeLists.txt
tests/cmake/buil/: CMakeCache.txt  Makefile  cmake_install.cmake
